# healthai

backend-ai/: README.md  main.py  polarSensor.py  pyproject.toml  railway.json  requirements.txt
backend-ai/BookingAgent/: book_agent.py
backend-ai/Configurations/: config.py
backend-ai/DataGenerator/: dataGenerator.py
backend-ai/Datasets/: vitals.csv
backend-ai/EDA/: vitals.ipynb
backend-ai/Endpoints/: ai_appointments.py  body_vitals.py
backend-ai/Models/: label_encoder_condition.pkl  label_encoder_status.pkl  multioutput_model.pkl  scaler.pkl
backend-ai/Prompts/: prompt.py
backend-ai/PydanticModels/: model.py
backend-ai/TrainingPipeline/: train.ipynb
backend-ai/Vitals/: body_vitals.py
