[project]
name = "backend-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.1",
    "fastapi>=0.116.2",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.5.0",
    "pandas>=2.3.2",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.35.0",
]
